--- a/recommendation-and-troubleshooting/pom.xml
+++ b/recommendation-and-troubleshooting/pom.xml
@@ -15,6 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<kie.version>7.17.0.Final</kie.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -24,6 +25,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.kie</groupId>
+			<artifactId>kie-ci</artifactId>
+			<version>${kie.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.drools</groupId>
+			<artifactId>drools-templates</artifactId>
+			<version>${kie.version}</version>
 		</dependency>
 
 		<dependency>
