--- a/recommendation-and-troubleshooting/src/main/resources/application.properties
+++ b/recommendation-and-troubleshooting/src/main/resources/application.properties
@@ -24,3 +24,5 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
 
 server.port=8080
+
+#swagger link: http://localhost:8080/swagger-ui.html#/
