--- a/recommendation-and-troubleshooting/recommendation-and-troubleshooting/pom.xml
+++ b/recommendation-and-troubleshooting/recommendation-and-troubleshooting/pom.xml
@@ -87,6 +87,11 @@
             <type>jar</type>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
