--- a/recommendation-and-troubleshooting/recommendation-and-troubleshooting/pom.xml
+++ b/recommendation-and-troubleshooting/recommendation-and-troubleshooting/pom.xml
@@ -86,6 +86,11 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+			<groupId>org.apache.maven.shared</groupId>
+			<artifactId>maven-invoker</artifactId>
+			<version>3.1.0</version>
+		</dependency>
     </dependencies>
 
     <build>
