--- a/recommendation-and-troubleshooting/recommendation-and-troubleshooting/pom.xml
+++ b/recommendation-and-troubleshooting/recommendation-and-troubleshooting/pom.xml
@@ -29,6 +29,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.jayway.jsonpath</groupId>
             <artifactId>json-path</artifactId>
             <scope>test</scope>
