--- a/recommendation-and-troubleshooting/recommendation-and-troubleshooting/src/main/resources/application.properties
+++ b/recommendation-and-troubleshooting/recommendation-and-troubleshooting/src/main/resources/application.properties
@@ -26,3 +26,10 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dial
 server.port=8080
 
 #swagger link: http://localhost:8080/swagger-ui.html#/
+
+#Email
+spring.mail.host = smtp.gmail.com
+spring.mail.username = javaj9351
+spring.mail.password = 5danaJave
+spring.mail.port=587
+spring.mail.properties.mail.smtp.starttls.enable = true
