backend part for troubleshooting + kie session fix

--- a/recommendation-and-troubleshooting/recommendation-and-troubleshooting/src/main/resources/application.properties
+++ b/recommendation-and-troubleshooting/recommendation-and-troubleshooting/src/main/resources/application.properties
@@ -1,35 +1,27 @@
 #Spring DataSource
 spring.datasource.driverClassName=org.postgresql.Driver
-
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/sbnz
 spring.datasource.username=postgres
 spring.datasource.password=postgresql
-#spring.datasource.data=classpath:sql/authority.sql, classpath:sql/admin.sql
-
+spring.datasource.data=classpath:sql/authority.sql, classpath:sql/admins.sql, classpath:sql/user_authority.sql, \
+  classpath:sql/descriptions.sql, classpath:sql/solutions.sql
 #JPA-Hibernate
-spring.jpa.show-sql = true
-
+spring.jpa.show-sql=true
 #kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.data.jpa.repositories.bootstrap-mode=default
-
 #create-drop
 #https://stackoverflow.com/questions/43905119/postgres-error-method-org-postgresql-jdbc-pgconnection-createclob-is-not-imple
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-
 #optimizacija za postgres upite
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL95Dialect
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 server.port=8080
-
 #swagger link: http://localhost:8080/swagger-ui.html#/
-
 #Email
-spring.mail.host = smtp.gmail.com
-spring.mail.username = javaj9351
-spring.mail.password = 5danaJave
+spring.mail.host=smtp.gmail.com
+spring.mail.username=javaj9351
+spring.mail.password=5danaJave
 spring.mail.port=587
-spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.starttls.enable=true
