--- a/recommendation-and-troubleshooting/recommendation-and-troubleshooting/pom.xml
+++ b/recommendation-and-troubleshooting/recommendation-and-troubleshooting/pom.xml
@@ -116,6 +116,10 @@
             <artifactId>maven-invoker</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
