--- a/recommendation-and-troubleshooting/recommendation-and-troubleshooting/src/main/resources/application.properties
+++ b/recommendation-and-troubleshooting/recommendation-and-troubleshooting/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/sbnz
 spring.datasource.username=postgres
 spring.datasource.password=postgresql
 spring.datasource.data=classpath:sql/authority.sql, classpath:sql/admins.sql, classpath:sql/user_authority.sql, \
-  classpath:sql/descriptions.sql, classpath:sql/solutions.sql
+  classpath:sql/descriptions.sql, classpath:sql/solutions.sql, classpath:sql/bugs.sql, \
+  classpath:sql/bugs_descriptions.sql, classpath:sql/order_solution_mapping.sql
 #JPA-Hibernate
 spring.jpa.show-sql=true
 #kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih
