--- a/recommendation-and-troubleshooting-front/package.json
+++ b/recommendation-and-troubleshooting-front/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
     "@auth0/angular-jwt": "^5.0.2",
+    "@material/dialog": "^11.0.0",
+    "ngx-stars": "^1.5.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
