backend fixes + started frontend for troubleshooting

--- a/recommendation-and-troubleshooting/recommendation-and-troubleshooting/src/main/resources/application.properties
+++ b/recommendation-and-troubleshooting/recommendation-and-troubleshooting/src/main/resources/application.properties
@@ -5,15 +5,18 @@ spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/sbnz
 spring.datasource.username=postgres
 spring.datasource.password=postgresql
-spring.datasource.data=classpath:sql/authority.sql, \
+spring.datasource.data=\
   classpath:sql/admins.sql, \
+  classpath:sql/users.sql, \
+  classpath:sql/authority.sql, \
   classpath:sql/user_authority.sql, \
   classpath:sql/descriptions.sql,\
   classpath:sql/solutions.sql, \
   classpath:sql/bugs.sql, \
-  classpath:sql/recommendation.sql, \
   classpath:sql/bugs_descriptions.sql, \
-  classpath:sql/order_solution_mapping.sql
+  classpath:sql/order_solution_mapping.sql, \
+  classpath:sql/recommendation.sql
+
 #JPA-Hibernate
 spring.jpa.show-sql=true
 #kreira tabele na osnovu anotacija @Entity i kada aplikacija zavrsi sa radom dropuje ih
