--- a/recommendation-and-troubleshooting/recommendation-and-troubleshooting/src/main/resources/application.properties
+++ b/recommendation-and-troubleshooting/recommendation-and-troubleshooting/src/main/resources/application.properties
@@ -15,7 +15,8 @@ spring.datasource.data=\
   classpath:sql/bugs.sql, \
   classpath:sql/bugs_descriptions.sql, \
   classpath:sql/order_solution_mapping.sql, \
-  classpath:sql/recommendation.sql
+  classpath:sql/recommendation.sql, \
+  classpath:sql/bug_histories.sql
 
 #JPA-Hibernate
 spring.jpa.show-sql=true
